--- a/more-reviews/styles.css
+++ b/more-reviews/styles.css
@@ -288,3 +288,28 @@ footer small {
   font-size: 1rem;
   color: #333;
 }
+
+
+.nav-toggle {
+  display: none;
+  font-size: 2em;
+  background: none;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  .nav-toggle {
+    display: block;
+  }
+  .header-nav {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 1em;
+  }
+  .header-nav.nav-open {
+    display: flex;
+  }
+}
